# mozcdic-ut-sudachidict

./: .gitignore  Cargo.toml  LICENSE.user_dic  LICENSE.userdic  README.md  config.toml
.github/workflows/: release.yaml
scripts/: convert_sudachidict_to_mozcdic.rb
src/: main.rs  make.sh
userdic/: mkdict.sh  uniqword.rb  user_dict.rb
