[package]
name = "dict-to-mozc"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA", "phoepsilonix <phoepsilonix@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
csv = "1.3.0"
getopts = "0.2.21"
kanaria = "0.2.0"
lazy-regex = "3.3.0"
regex = "1.11.0"
unicode-width = "0.2.0"

[profile.release]
strip = "symbols"
